<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielcampu.calculadora.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/lightgray"
        android:layout_marginBottom="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/eShowResult"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:text="@string/seven"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b7"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/ocho"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b8"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/nueve"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b9"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/suma"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/bSuma"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="3dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:text="@string/cuatro"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b4"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/cinco"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b5"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/seis"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b6"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/menos"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/bMenos"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="3dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:text="@string/uno"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b1"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/dos"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b2"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/tres"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b3"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/multiplicacion"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/bMultiplicacion"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="3dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:text="@string/punto"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/bPunto"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/cero"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/b0"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/igual"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/bIgual"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:layout_marginLeft="3dp"
            android:text="@string/dividido"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onButtonClicked"
            android:id="@+id/bDivision"/>

    </LinearLayout>

</LinearLayout>
